--- a/CMS/CMS/Views/MainPage.xaml
+++ b/CMS/CMS/Views/MainPage.xaml
@@ -24,6 +24,9 @@
         <Button Text="Synchronize Data" Clicked="OnSynchronizeButtonClicked"  HorizontalOptions="FillAndExpand"  FontAttributes="Bold"/>
       </StackLayout>
       <StackLayout Orientation="Horizontal">
+        <Button Text="Change Password" Clicked="Button_OnClicked"  HorizontalOptions="FillAndExpand"  FontAttributes="Bold"/>
+      </StackLayout>
+      <StackLayout Orientation="Horizontal">
         <Button Text="About" HorizontalOptions="FillAndExpand" Clicked="OnAboutButtonClicked" FontAttributes="Bold"/>
       </StackLayout>
       <!--<StackLayout Orientation="Horizontal">
