--- a/CMS/CMS/Views/SimpleSalesReturnPage.xaml
+++ b/CMS/CMS/Views/SimpleSalesReturnPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:CMS.Controls;assembly=CMS"
              xmlns:pages="clr-namespace:CMS.Pages;assembly=CMS"
-             x:Class="CMS.Views.SimpleSalesInputPage"
+             x:Class="CMS.Views.SimpleSalesReturnPage"
              xmlns:local="clr-namespace:CMS.Controls;assembly=CMS">
   <ContentPage.Resources>
     <ResourceDictionary>
@@ -18,7 +18,7 @@
   <ContentPage.Content>
     <ScrollView Orientation="Vertical">
       <StackLayout VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" Margin="50">
-        <Label Text="Sales Input" HorizontalOptions="Center" FontSize="Large" FontAttributes="Bold"/>
+        <Label Text="Sales Return" HorizontalOptions="Center" FontSize="Large" FontAttributes="Bold"/>
         <!--<Label Text="Nota"/>
         <Entry x:Name="Nota"/>-->
         <Label Text="Barcode"/>
@@ -46,23 +46,22 @@
             DisplayMemberPath="branddesc"
             SelectedValuePath="brandid"
             SelectedIndexChanged="BrandSelectionSelectedIndexChanged"
-        />
-        -->
-        <Label Text="SKU"/>
+        />-->
+        <!--<Label Text="SKU"/>
         <controls:BindablePicker
             x:Name="SKUSelection"
             DisplayMemberPath="name"
             SelectedValuePath="id"
-        />
+        />-->
         <Label Text="Quantity"/>
-        <local:CustomEntry x:Name="Qty"  Keyboard="Numeric" />
+        <local:CustomEntry x:Name="Qty"  Keyboard="Numeric"/>
         <Label Text="Discount"/>
-        <Entry x:Name="discount" Keyboard="Numeric" />
+        <Entry x:Name="discount" Keyboard="Numeric"/>
         <Label Text="Normal Price"/>
-        <Entry x:Name="normalPrice" Keyboard="Numeric" />
+        <Entry x:Name="normalPrice" Keyboard="Numeric"/>
         <Label Text="Final Price"/>
         <Entry x:Name="finalPrice" Keyboard="Numeric"/>
-        <Button Text="Save" Clicked="OnSaveButtonClicked"  x:Name="saveBtn"/>
+        <Button Text="Save" Clicked="OnSaveButtonClicked" />
         <Label x:Name="messageLabel" />
       </StackLayout>
     </ScrollView>
