--- a/CMS/CMS/Views/Abouts.xaml
+++ b/CMS/CMS/Views/Abouts.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CMS.Views.Abouts">
   <ContentPage.ToolbarItems>
-    <ToolbarItem Text="Logout" Clicked="OnLogoutButtonClicked" />
+    <!--<ToolbarItem Text="Logout" Clicked="OnLogoutButtonClicked" />-->
   </ContentPage.ToolbarItems>
 
   <ContentPage.Content >
@@ -28,10 +28,10 @@
           <Label Grid.Row="0" Grid.Column="1" Text=": 1 "></Label>
           <Label Grid.Row="1" Grid.Column="0" Text="Android"></Label>
           <Label Grid.Row="1" Grid.Column="1" Text=": Kitkat Until Marshmallow"></Label>
-          <Label Grid.Row="2" Grid.Column="0" Text="IOS"></Label>
+          <!--<Label Grid.Row="2" Grid.Column="0" Text="IOS"></Label>
           <Label Grid.Row="2" Grid.Column="1" Text=": Not Available"></Label>
           <Label Grid.Row="3" Grid.Column="0" Text="Windows"></Label>
-          <Label Grid.Row="3" Grid.Column="1" Text=": Not Available"></Label>
+          <Label Grid.Row="3" Grid.Column="1" Text=": Not Available"></Label>-->
         </Grid>
       </StackLayout>
     </ScrollView>
