--- a/CMS/CMS/Views/ComplexSalesInputPage.xaml
+++ b/CMS/CMS/Views/ComplexSalesInputPage.xaml
@@ -19,8 +19,8 @@
     <ScrollView Orientation="Vertical">
       <StackLayout VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" Margin="50">
         <Label Text="Sales Input" HorizontalOptions="Center" FontSize="Large" FontAttributes="Bold"/>
-        <!--<Label Text="Nota"/>
-        <Entry x:Name="Nota"/>-->
+        <Label Text="Nota"/>
+        <Entry x:Name="Nota"/>
         <Label Text="Barcode"/>
         <Grid Margin="0">
           <Grid.RowDefinitions>
@@ -48,7 +48,7 @@
             SelectedIndexChanged="BrandSelectionSelectedIndexChanged"
         />
         -->
-        <Label Text="SKU"/>
+        <Label x:Name="SKULabel" Text="SKU"/>
         <controls:BindablePicker
             x:Name="SKUSelection"
             DisplayMemberPath="name"
@@ -56,10 +56,12 @@
         />
         <Label Text="Quantity"/>
         <local:CustomEntry x:Name="Qty"  Keyboard="Numeric" />
-        <Label Text="Discount"/>
-        <Entry x:Name="discount" Keyboard="Numeric" />
+        <!--<Label Text="Discount"/>
+        <Entry x:Name="discount" Keyboard="Numeric" />-->
         <Label Text="Price"/>
         <Entry x:Name="Price" Keyboard="Numeric" />
+        <Label Text="Comment"/>
+        <Entry x:Name="Comment"/>
         <Button Text="Save" Clicked="OnSaveButtonClicked"  x:Name="saveBtn"/>
         <Label x:Name="messageLabel" />
         <ProgressBar x:Name="bar" Scale="1">
