--- a/CMS/CMS/Views/LoginPage.xaml
+++ b/CMS/CMS/Views/LoginPage.xaml
@@ -25,6 +25,10 @@
           </Grid>
         </RelativeLayout>
       </ScrollView>
+    <StackLayout Orientation="Horizontal" VerticalOptions="End">
+    <!-- bottom controls -->
+    <Image Source=""></Image>
+  </StackLayout>
     </AbsoluteLayout>
     
   </ContentPage.Content>
