--- a/CMS/CMS/Views/LoginPage.xaml
+++ b/CMS/CMS/Views/LoginPage.xaml
@@ -18,7 +18,9 @@
             <StackLayout Orientation="Vertical" VerticalOptions="Center" HorizontalOptions="FillAndExpand" Margin="45">
               <Entry x:Name="usernameEntry" Placeholder="username" HorizontalOptions="FillAndExpand"   Completed="UsernameEntry_OnCompleted"/>
               <Entry x:Name="passwordEntry" IsPassword="true" Placeholder="password"  HorizontalOptions="FillAndExpand"  Completed="PasswordEntry_OnCompleted"/>
+              <!--<Entry x:Name="companyEntry" Placeholder="company" HorizontalOptions="FillAndExpand"   Completed="CompanyEntry_OnCompleted"/>-->
               <Button x:Name="btnLogin" Text="Login" Clicked="OnLoginButtonClicked"  HorizontalOptions="FillAndExpand"  />
+              <Button x:Name="btnConnSettings" Text="Connection Settings" Clicked="OnConnButtonClicked"  HorizontalOptions="FillAndExpand"  />
               <ProgressBar x:Name="bar" Scale="1">
               </ProgressBar>
             </StackLayout>
